--- a/status_bar_clock/views/res_company_view.xml
+++ b/status_bar_clock/views/res_company_view.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <!--
  © 2018-Today Aktiv Software (http://www.aktivsoftware.com).
  License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
@@ -10,7 +10,7 @@
         <field name="model">res.company</field>
         <field name="inherit_id" ref="base.view_company_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='website']" position="after">
+            <xpath expr="//field[@name='report_header']" position="after">
                 <field name="clock_format" required="1"/>
             </xpath>
         </field>
