--- a/status_bar_clock/views/status_bar_clock_view.xml
+++ b/status_bar_clock/views/status_bar_clock_view.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <!--
-© 2018-Today Aktiv Software (http://www.aktivsoftware.com).
-License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
+ © 2018-Today Aktiv Software (http://www.aktivsoftware.com).
+ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
  -->
 <odoo>
-    
+
     <template id="assets_backend" inherit_id="web.assets_backend">
         <xpath expr="." position="inside">
             <script type="text/javascript" src="/status_bar_clock/static/src/js/date_time.js"/>
